Tests/Bad/continue.min
function main;
beginparams
endparams
beginlocals
	n : integer;
	r : array [10] of integer;
endlocals
beginbody
 	read n;
 	n := n + 1;
 	n := n + n;
 	write n;
 	continue;
 endbody
